@@ -307,6 +307,7 @@
           <includes>
             <include>**/*Spec.java</include>
           </includes>
+          <argLine>${jacoco.agent} --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</argLine>
           <parallel>methods</parallel>
           <useUnlimitedThreads>true</useUnlimitedThreads>
         </configuration>
